syntax = "proto3";

package io.streammachine.api.batch_exporters.v1;

import "google/api/field_behavior.proto";
import "io/streammachine/api/entities/v1/entities_v1.proto";

option go_package = "streammachine.io/api/batch_exporters/v1;batch_exporters";
option java_multiple_files = true;

service BatchExportersService {
  rpc ListBatchExporters (ListBatchExportersRequest) returns (ListBatchExportersResponse);
  rpc GetBatchExporter (GetBatchExporterRequest) returns (GetBatchExporterResponse);
  rpc DeleteBatchExporter (DeleteBatchExporterRequest) returns (DeleteBatchExporterResponse);
  rpc CreateBatchExporter (CreateBatchExporterRequest) returns (CreateBatchExporterResponse);
}

message ListBatchExportersRequest {
  string billing_id = 1;
}

message ListBatchExportersResponse {
  repeated io.streammachine.api.entities.v1.BatchExporter batch_exporters = 1;
}

message DeleteBatchExporterRequest {
  entities.v1.BatchExporterRef ref = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteBatchExporterResponse {
}

message CreateBatchExporterRequest {
  io.streammachine.api.entities.v1.BatchExporter batch_exporter = 1;
}

message CreateBatchExporterResponse {
  io.streammachine.api.entities.v1.BatchExporter batch_exporter = 1;
}

message GetBatchExporterRequest {
  entities.v1.BatchExporterRef ref = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetBatchExporterResponse {
  io.streammachine.api.entities.v1.BatchExporter batch_exporter = 1;
}
